--- a/HTML/Day1/6. 이미지태그.html
+++ b/HTML/Day1/6. 이미지태그.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이미지 태그</title>
 </head>
+
 <body>
     <h2>이미지 태그</h2>
-    <img src="sea1.png" alt="바다1 이미지">
-    <img src="sea2.png" alt="바다2 이미지">
-    <img src="sea3.png" alt="바다3 이미지">
+    <img src="images/sea1.png" alt="바다1 이미지">
+    <img src="../sea2.png" alt="바다2 이미지">
+    <img src="../fish/sea3.png" alt="바다3 이미지">
     <img src="sea4.png" alt="바다4 이미지">
     <img src="sea5.png" alt="바다5 이미지">
+    <img src="https://t1.daumcdn.net/daumtop_chanel/op/20200723055344399.png" alt="다음 로고">
+
 </body>
+
 </html>
