--- a/HTML/Day2/6. 폼태그.html
+++ b/HTML/Day2/6. 폼태그.html
@@ -10,17 +10,69 @@
 
 <body>
     <h2>폼 태그</h2>
-    <form action="#" method="post">
-        <p>아이디: <input type="text" name="userid" id="userid" maxlength="20" placeholder="아이디를 입력하세요"></p>
-        <p>비밀번호: <input type="password" name="userpw" id="userpw" maxlength="20" placeholder="비밀번호를 입력하세요"></p>
+    <form action="member" method="post">
+        
+        <input type="hidden" name="hidden" value="서버로 전달될 값">
+
+        <p>아이디: <input type="text" name="userid" id="userid" maxlength="20" placeholder="아이디를 입력하세요" required></p>
+
+        <p>비밀번호: <input type="password" name="userpw" id="userpw" maxlength="20" placeholder="비밀번호를 입력하세요" required></p>
+
         <p>
             성별: 
             <label for="male">남자</label>
-            <input type="radio" id="male" name="gender" checked>
+            <input type="radio" id="male" name="gender" value="남자" checked>
             <label for="female">여자</label>
-            <input type="radio" id="female" name="gender"
-        ></p>
+            <input type="radio" id="female" name="gender" value="여자">
+        </p>
 
+        <p>
+            취미: 
+            운동<input type="checkbox" name="hobby" value="운동">
+            음악감상<input type="checkbox" name="hobby" value="음악감상">
+            영화감상<input type="checkbox" name="hobby" value="영화감상">
+            게임<input type="checkbox" name="hobby" value="게임">
+            등산<input type="checkbox" name="hobby" value="등산">
+        </p>
+
+        <p>나이: <input type="text" name="age" value="-1" readonly></p>
+        <p>주민등록번호: <input type="text" name="ssn" disabled></p>
+        <p>첨부파일: <input type="file" name="file"></p>
+
+        <p>
+            직업: 
+            <select name="job">
+                <option value="프로그래머">프로그래머</option>
+                <option value="공무원">공무원</option>
+                <option value="전문직">전문직</option>
+                <option value="학생">학생</option>
+                <option value="취준생">취준생</option>
+            </select>
+        </p>
+
+        <p>자기소개</p>
+        <p><textarea name="content" cols="50" rows="5"></textarea></p>
+
+        <p>이메일: <input type="email"></p>
+        <p>웹사이트: <input type="url"></p>
+        <p>전화번호: <input type="tel"></p>
+
+        <p>생년월일: <input type="date"></p>
+
+        <p>좋아하는 숫자: <input type="number" min="1" max="10" step="1"></p>
+
+        <p>좋아하는 색상: <input type="color"></p>
+
+        <p>검색어: <input type="search"></p>
+
+        <p>프로그래밍 능력: <input type="range" min="1" max="5" value="3"></p>
+
+        <p>
+            <input type="button" value="클릭하세요" onclick="alert('안녕!?')">
+            <input type="reset" value="다시입력">
+            <input type="submit" value="회원가입">
+            <button type="button">버튼클릭</button>
+        </p>
 
 
     </form>
