--- a/HTML/Day2/index.html
+++ b/HTML/Day2/index.html
@@ -10,5 +10,7 @@
     <h1>이현준 홈페이지</h1>
     <p>최초의 이현준 홈페이지 오신 걸 환영합니다!</p>
     <p><img src="images/img.jpg" alt="흰둥이사진"></p>
+
+    <a href="resume.html"><h2>흰둥이 이력서</h2></a>
 </body>
 </html>
